--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "react-scripts": "5.0.0",
     "socket.io-client": "^4.4.1",
     "styled-components": "^5.3.3",
+    "uniqid": "^5.4.0",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
